[java-inspection] IDEA-377869 Wrong inferred @Contract for JUnit 5 assertInstanceOf
- improve contract to show

GitOrigin-RevId: e9fa51b9bd2aeba4d9dc890547141fb8de4855fd